--- a/vadginger-alpha/app/views/Activities/_form.html
+++ b/vadginger-alpha/app/views/Activities/_form.html
@@ -21,7 +21,7 @@
       <option value="">Selecteer een organisatie</option>
      #{if userRole.compareTo(models.RoleType.ORG_ADMIN) > 0 }
              
-        %{ models.Organisaties.find("ouder is null and isActive=1").fetch().sort{ it.toString() }.each() { }%
+        %{ models.Organisaties.find("ouder is null and isActive=1  order by naam").fetch().each() { }%
           
           %{
             selected = false;
@@ -34,7 +34,7 @@
         #{/if}
         #{else}
              
-        %{ models.Organisaties.find("ouder is null and isActive=1 and centrumId is " + centrumId.id).fetch().sort{ it.toString() }.each() { }%
+        %{ models.Organisaties.find("ouder is null and isActive=1 and centrumId is " + centrumId.id + "order by naam").fetch().each() { }%
           
           %{
             selected = false;
