--- a/vadginger-alpha/app/views/Activities/index.html
+++ b/vadginger-alpha/app/views/Activities/index.html
@@ -12,15 +12,15 @@
 <table id="mytable" class="entity Activity">
 	<thead>
 		<tr>
-				<th>Beschrijving</th>
-				<th>Datum</th>
-				<th>Organisatie</th>
-				<th>Duur</th>
-				<th>Eval.</th>
-				<th>Intern</th>
-				<th>Deel-nemers</th>
-				<th>Locatie</th>
-				<th>Organisator</th>
+				<th><a href="@{Activities.index()}?orderby=beschrijving&orderhow=${params.orderby=='beschrijving'&&params.orderhow=='asc' ? 'desc':'asc'}${allowExport ? '&filter':''}" class="sorter">Beschrijving</a></th>
+				<th><a href="@{Activities.index()}?orderby=Activity_date&orderhow=${params.orderby=='Activity_date'&&params.orderhow=='asc' ? 'desc':'asc'}${allowExport ? '&filter':''}" class="sorter">Datum</a></th>
+				<th><a href="@{Activities.index()}?orderby=organizationId.naam&orderhow=${params.orderby=='organizationId.naam'&&params.orderhow=='asc' ? 'desc':'asc'}${allowExport ? '&filter':''}" class="sorter">Organisatie</a></th>
+				<th><a href="@{Activities.index()}?orderby=duur&orderhow=${params.orderby=='duur'&&params.orderhow=='asc' ? 'desc':'asc'}${allowExport ? '&filter':''}" class="sorter">Duur</a></th>
+				<th><a href="@{Activities.index()}?orderby=Evaluvated&orderhow=${params.orderby=='Evaluvated'&&params.orderhow=='asc' ? 'desc':'asc'}${allowExport ? '&filter':''}" class="sorter">Eval.</a></th>
+				<th><a href="@{Activities.index()}?orderby=InternalActivity&orderhow=${params.orderby=='InternalActivity'&&params.orderhow=='asc' ? 'desc':'asc'}${allowExport ? '&filter':''}" class="sorter">Intern</a></th>
+				<th><a href="@{Activities.index()}?orderby=TotalParticipants&orderhow=${params.orderby=='TotalParticipants'&&params.orderhow=='asc' ? 'desc':'asc'}${allowExport ? '&filter':''}" class="sorter">Deel-nemers</a></th>
+				<th><a href="@{Activities.index()}?orderby=locationId.naam&orderhow=${params.orderby=='locationId.naam'&&params.orderhow=='asc' ? 'desc':'asc'}${allowExport ? '&filter':''}" class="sorter">Locatie</a></th>
+				<th><a href="@{Activities.index()}?orderby=userId.userID&orderhow=${params.orderby=='userId.userID'&&params.orderhow=='asc' ? 'desc':'asc'}${allowExport ? '&filter':''}" class="sorter">Gebr.</a></th>
 			  <th><!-- actions --></th>
 		</tr>
 	</thead>
@@ -48,6 +48,7 @@
               <td><a href="@{Activities.show(entity.id)}" title="Bekijken" name="Bekijken"><div class="viewer actionbutton"></div></a></td>
               <td><a href="@{Activities.edit(entity.id)}" title="Bewerken" name="Bewerken"><div class="editor actionbutton"></div></a></td>
               <td><a href="@{Activities.delete(entity.id)}" title="Verwijderen" name="Verwijderen" onclick="if (!confirm('Ben je zeker dat je dit object will verwijderen?')) return false;"><div class="deleter actionbutton"></div></a></td>
+              <td><a href="@{Activities.copy(entity.id)}" title="Kopi&euml;er" name="Kopi&euml;er"><div class="copier actionbutton"></div></a></td>
             </tr></table>
           </td>
 		</tr>
