--- a/vadginger-alpha/app/views/Organisatiess/_form.html
+++ b/vadginger-alpha/app/views/Organisatiess/_form.html
@@ -53,8 +53,8 @@
     
     
       <select name="entity.organisatieNetwerk" >
-        <option value="org">Organisatie</option>
-        <option value="net">Netwerk</option>
+        <option value="Org">Organisatie</option>
+        <option value="Net">Netwerk</option>
 
       </select>
     
