--- a/vadginger-alpha/app/views/Locationss/_cluster_form.html
+++ b/vadginger-alpha/app/views/Locationss/_cluster_form.html
@@ -52,7 +52,7 @@
   %{
   	i = 0;
   	k = 10;
-  	keys = models.Locations.find("ouder=1 and isActive=1").fetch();
+  	keys = models.Locations.find("ouder=1 and isActive=1 order by naam").fetch();
   	if (locs!=null) {
   		i = locs.size();
   		k = k - i;
