--- a/vadginger-alpha/app/views/VadGingerUsers/index.html
+++ b/vadginger-alpha/app/views/VadGingerUsers/index.html
@@ -10,6 +10,7 @@
 				<th>Email</th>
 				<th>Rol</th>
 				<th>Login Teller</th>
+				<th>Paswoord</th>
 			  <th><!-- actions --></th>
 	        
 			
@@ -23,6 +24,7 @@
 					<td>${entity.emailAddress}</td>
 					<td>${entity.role}</td>
 					<td>${entity.loginCount}</td>
+					<td>${entity.passwordHash}</td>
           <td>
             <table class="actiontable"><tr>
               <td><a href="@{VadGingerUsers.show(entity.id)}" title="Bekijken" name="Bekijken"><div class="viewer actionbutton"></div></a></td>
