CSV export modifications + some other minor bug fixes

--- a/vadginger-alpha/app/views/Secure/login.html
+++ b/vadginger-alpha/app/views/Secure/login.html
@@ -42,3 +42,4 @@
 	#{/form}
 </div>
 <div style="margin-top:20px;"><a href="@{Statics.forgotPass()}">Paswoord vergeten?</a></div>
+<div style="margin-top:20px;"><a href="@{Statics.forgotAccount()}">Gebruikersnaam vergeten?</a></div>
