--- a/vadginger-alpha/app/views/Statics/forgotPass.html
+++ b/vadginger-alpha/app/views/Statics/forgotPass.html
@@ -6,7 +6,7 @@
 
 <div class="form">
 
-#{form @Statics.sendPass(), id:'sendPass'}
+#{form @Statics.sendPass(gebruikersnaam), id:'sendPass'}
  <div class="row">
   <div class="label">Je gebruikersnaam:</div>
   <div class="field">
