--- a/vadginger-alpha/app/views/Activities/show.html
+++ b/vadginger-alpha/app/views/Activities/show.html
@@ -68,12 +68,11 @@
 		</span>
 		<span class="value">
 		<ul>
+    #{list items:iia, as:'ia'}
 		<li>
-     		#{list items:iia, as:'ia'}
 			<span class="value">${ia.itemId} </span>
-			
-			#{/list}
 		</li>
+		#{/list}
 		</ul>
 		</span>
 	</div>
@@ -84,12 +83,11 @@
 		</span>
 		<span class="value">
 		<ul>
+    #{list items:mia, as:'ia'}
 		<li>
-     		#{list items:mia, as:'ia'}
 			<span class="value">${ia.materialId} </span>
-			
-			#{/list}
 		</li>
+		#{/list}
 		</ul>
 		</span>
 	</div>
@@ -100,16 +98,19 @@
 		</span>
 		<span class="value">
 		<ul>
-		<li>
-     		#{list items:asc, as:'ia'}
+      #{list items:sajs, as:'ia'}
+		  <li>
      		#{if ia.sectorId.ouder!=null}
      		<span class="value">${ia.sectorId.ouder} </span>
-     		#{/if}
      		<ul><li>
-			<span class="value">${ia.sectorId} </span>
-			</li></ul>
+          <span class="value">${ia.sectorId} </span>
+        </li></ul>
+        #{/if}
+        #{else}
+            <span class="value">${ia.sectorId} </span>
+        #{/else}
+		  </li>
 			#{/list}
-		</li>
 		</ul>
 		</span>
 	</div>
