--- a/vadginger-alpha/app/views/Activities/_edit_form.html
+++ b/vadginger-alpha/app/views/Activities/_edit_form.html
@@ -377,7 +377,7 @@
   <div class="field">
     <select name="activity_type" id="activity_type_select">
       <option value="">Selecteer de soort activiteit</option>
-      %{ models.ActivityType.find("ouder is null and isActive=1").fetch().sort{ it.toString() }.each() { }%
+      %{ models.ActivityType.find("ouder is null and isActive=1 order by id").fetch().each() { }%
       %{
       selected = false;
       for(models.ActivityTypeJunction atj: entity.activityTypeJunctions) {
