--- a/vadginger-alpha/app/views/Activities/edit.html
+++ b/vadginger-alpha/app/views/Activities/edit.html
@@ -5,7 +5,7 @@
 <div class="entity">
 #{form @Activities.update(), id:'createForm'}
 	#{include 'Activities/_edit_form.html' /}
-	<button class="submit ui-corner-all submitbutton">Opslaan</button>
+	<input type="submit" class="submit ui-corner-all" value="Opslaan"/>
   <button class="submit ui-corner-all" onclick="history.back();return false;">Terug</button>
 #{/form}
 </div>
