--- a/vadginger-alpha/app/views/Activities/show.html
+++ b/vadginger-alpha/app/views/Activities/show.html
@@ -141,7 +141,7 @@
 			Interne Activiteit:
 		</span>
 		<span class="value">
-      ${entity.internalActivity}
+      ${entity.internalActivity ? "Ja" : "Neen"}
 		</span>
 		
 	</div>
@@ -153,7 +153,7 @@
 			Gerapporteerd:
 		</span>
 		<span class="value">
-      ${entity.reported}
+      ${entity.reported ? "Ja" : "Neen"}
 		</span>
 		
 	</div>
